Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-1491

Uninitialize processorFactory_ member in TServer.h

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Trivial
    • Resolution: Fixed
    • 0.9
    • 0.9
    • C++ - Library
    • None
    • clang 3.0

    • Patch Available

    Description

      In lib/cpp/src/server/TServer.h there are two instances that the member 'processorFactory_' is initialized from itself. This causes the following warnings in clang 3.0

      /usr/local/include/thrift/server/TServer.h:147:23: error: field is uninitialized when used here
      [-Werror,-Wuninitialized]
      processorFactory_(processorFactory_) {
      ^
      /usr/local/include/thrift/server/TServer.h:230:23: error: field is uninitialized when used here
      [-Werror,-Wuninitialized]
      processorFactory_(processorFactory_),
      ^

      Attachments

        Activity

          People

            Unassigned Unassigned
            benfred Ben Frederickson
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: