THRIFT-1491 Uninitialize processorFactory_ member in TServer.h Patch: Ben Frederickson

git-svn-id: https://svn.apache.org/repos/asf/thrift/trunk@1232544 13f79535-47bb-0310-9956-ffa450edef68